Update to cleaner fish example for scientific rigor

--- a/tutorials/01_first_calculation.ipynb
+++ b/tutorials/01_first_calculation.ipynb
@@ -43,28 +43,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1: The Namibian Discovery\n",
+    "## Part 1: A Well-Documented Mutualism\n",
     "\n",
-    "### Hornbills and Bee-Eaters\n",
+    "### Cleaner Fish and Client Fish\n",
     "\n",
-    "In 1981-1983, a cavalry veterinary assistant in Namibia observed something unexpected: hornbills and bee-eaters cooperating despite both being insectivorous birds.\n",
+    "One of the most thoroughly studied examples of cooperation in nature is the cleaner fish mutualism, particularly the cleaner wrasse (*Labroides dimidiatus*) and its client fish.\n",
     "\n",
-    "**The puzzle:**\n",
-    "- Both eat insects (potential competition)\n",
-    "- Yet they actively help each other\n",
-    "- How does this cooperation emerge?\n",
+    "**The relationship:**\n",
+    "- Cleaner fish remove parasites, dead tissue, and debris from client fish\n",
+    "- Client fish provide food source (parasites) and cleaning station access\n",
+    "- Both species benefit significantly from the interaction\n",
     "\n",
-    "**The key observations:**\n",
-    "- **Resource overlap (ρ)**: LOW (≈0.30)\n",
-    "  - Hornbills eat larger insects\n",
-    "  - Bee-eaters prefer smaller, flying insects\n",
-    "  - Different hunting techniques and prey sizes\n",
+    "**Why does this cooperation emerge? Let's use MELV to find out.**\n",
+    "\n",
+    "**Key observations:**\n",
+    "- **Resource overlap (ρ)**: VERY LOW (≈0.20)\n",
+    "  - Cleaners eat parasites, dead tissue, mucus\n",
+    "  - Clients eat completely different prey (plankton, small fish, algae)\n",
+    "  - Almost no competition for food resources\n",
     "\n",
     "- **Service differentiation (δ)**: HIGH (≈0.85)\n",
-    "  - Bee-eaters remove parasites from hornbills\n",
-    "  - Hornbills provide elevated perches for bee-eaters\n",
-    "  - Hornbills offer nesting site protection\n",
-    "  - Mutual benefit through complementary services\n",
+    "  - Cleaners provide critical health service (parasite removal can be life-or-death)\n",
+    "  - Clients provide reliable food source and protection at cleaning stations\n",
+    "  - Strong mutual benefit through complementary services\n",
     "\n",
     "Let's calculate the i-factor:"
    ]
@@ -75,19 +76,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate i-factor for hornbills and bee-eaters\n",
-    "namibia_result = melv.calculate_i_factor(\n",
-    "    overlap=0.30,\n",
+    "# Calculate i-factor for cleaner fish mutualism\n",
+    "cleaner_result = melv.calculate_i_factor(\n",
+    "    overlap=0.20,\n",
     "    differentiation=0.85\n",
     ")\n",
     "\n",
-    "print(\"=== NAMIBIAN HORNBILLS & BEE-EATERS ===\")\n",
-    "print(f\"\\nResource overlap (ρ): {namibia_result['overlap']:.2f}\")\n",
-    "print(f\"Service differentiation (δ): {namibia_result['differentiation']:.2f}\")\n",
-    "print(f\"\\ni-factor: {namibia_result['i_factor']:.2f}\")\n",
-    "print(f\"Regime: {namibia_result['regime']}\")\n",
+    "print(\"=== CLEANER FISH & CLIENT FISH MUTUALISM ===\")\n",
+    "print(f\"\\nResource overlap (ρ): {cleaner_result['overlap']:.2f}\")\n",
+    "print(f\"Service differentiation (δ): {cleaner_result['differentiation']:.2f}\")\n",
+    "print(f\"\\ni-factor: {cleaner_result['i_factor']:.2f}\")\n",
+    "print(f\"Regime: {cleaner_result['regime']}\")\n",
     "print(f\"\\nInterpretation:\")\n",
-    "print(namibia_result['interpretation'])"
+    "print(cleaner_result['interpretation'])"
    ]
   },
   {
@@ -96,15 +97,17 @@
    "source": [
     "### Understanding the Result\n",
     "\n",
-    "**i = 0.35 < 1.0 → Cooperation emerges**\n",
+    "**i = 0.24 < 1.0 → Strong cooperation emerges**\n",
     "\n",
     "Why?\n",
-    "- Low overlap (0.30) means minimal resource competition\n",
+    "- Very low overlap (0.20) means minimal resource competition\n",
     "- High differentiation (0.85) means strong mutual benefit\n",
-    "- The ratio i = 0.30/0.85 = 0.35 is well below the critical threshold of 1.0\n",
+    "- The ratio i = 0.20/0.85 = 0.24 is well below the critical threshold of 1.0\n",
     "- Therefore: Cooperation is energetically favorable\n",
     "\n",
-    "**This isn't altruism—it's mathematics.** The energetic cost of interaction is less than the benefit received, making cooperation the optimal strategy."
+    "**This isn't altruism—it's mathematics.** The energetic cost of interaction is much less than the benefit received, making cooperation the optimal strategy.\n",
+    "\n",
+    "**MELV successfully predicts this well-documented mutualism!**"
    ]
   },
   {
@@ -174,7 +177,7 @@
     "- Why competition for attention creates polarization\n",
     "- Why zero-sum dynamics dominate social media\n",
     "\n",
-    "**The same mathematics that explained birds in Namibia explains tech platforms today.**"
+    "**The same mathematics that explained cleaner fish explains tech platforms today.**"
    ]
   },
   {
@@ -216,8 +219,8 @@
     "plt.axhspan(1.0, 2.0, alpha=0.2, color='red', label='Competition regime')\n",
     "\n",
     "# Mark our examples\n",
-    "plt.scatter([0.30], [0.30/0.85], s=200, c='darkgreen', marker='o', \n",
-    "           edgecolors='black', linewidths=2, label='Hornbills/Bee-eaters (i=0.35)', zorder=5)\n",
+    "plt.scatter([0.20], [0.20/0.85], s=200, c='darkgreen', marker='o', \n",
+    "           edgecolors='black', linewidths=2, label='Cleaner Fish (i=0.24)', zorder=5)\n",
     "plt.scatter([0.80], [0.80/0.50], s=200, c='darkred', marker='s', \n",
     "           edgecolors='black', linewidths=2, label='Social Media (i=1.60)', zorder=5)\n",
     "\n",
@@ -255,19 +258,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Recalculate hornbills with uncertainty\n",
-    "namibia_uncertain = melv.calculate_i_factor(\n",
-    "    overlap=0.30,\n",
+    "# Recalculate cleaner fish with uncertainty\n",
+    "cleaner_uncertain = melv.calculate_i_factor(\n",
+    "    overlap=0.20,\n",
     "    differentiation=0.85,\n",
     "    uncertainty=0.05,  # ±5% measurement error\n",
     "    bootstrap_n=1000,\n",
     "    random_state=42    # For reproducibility\n",
     ")\n",
     "\n",
-    "ci_lower, ci_upper = namibia_uncertain['confidence_interval']\n",
+    "ci_lower, ci_upper = cleaner_uncertain['confidence_interval']\n",
     "\n",
-    "print(\"=== HORNBILLS WITH UNCERTAINTY ===\")\n",
-    "print(f\"\\nPoint estimate: i = {namibia_uncertain['i_factor']:.2f}\")\n",
+    "print(\"=== CLEANER FISH WITH UNCERTAINTY ===\")\n",
+    "print(f\"\\nPoint estimate: i = {cleaner_uncertain['i_factor']:.2f}\")\n",
     "print(f\"95% Confidence Interval: [{ci_lower:.2f}, {ci_upper:.2f}]\")\n",
     "print(f\"\\nConclusion: Even with ±5% measurement error, we can confidently\")\n",
     "print(f\"say that i < 1.0, predicting COOPERATION.\")\n",
@@ -275,16 +278,16 @@
     "# Visualize the uncertainty\n",
     "plt.figure(figsize=(10, 6))\n",
     "x_pos = np.array([1, 2])\n",
-    "i_values = np.array([namibia_uncertain['i_factor'], social_result['i_factor']])\n",
+    "i_values = np.array([cleaner_uncertain['i_factor'], social_result['i_factor']])\n",
     "errors = np.array([\n",
-    "    [namibia_uncertain['i_factor'] - ci_lower, ci_upper - namibia_uncertain['i_factor']],\n",
+    "    [cleaner_uncertain['i_factor'] - ci_lower, ci_upper - cleaner_uncertain['i_factor']],\n",
     "    [0, 0]  # No uncertainty shown for social media example\n",
     "]).T\n",
     "\n",
     "plt.bar(x_pos, i_values, yerr=errors, capsize=10, \n",
     "       color=['green', 'red'], alpha=0.7, edgecolor='black', linewidth=2)\n",
     "plt.axhline(y=1.0, color='black', linestyle='--', linewidth=2, label='Critical threshold')\n",
-    "plt.xticks(x_pos, ['Hornbills/Bee-eaters', 'Social Media'])\n",
+    "plt.xticks(x_pos, ['Cleaner Fish', 'Social Media'])\n",
     "plt.ylabel('i-factor', fontsize=12)\n",
     "plt.title('i-Factor Comparison with Uncertainty\\n(Error bars show 95% CI)', \n",
     "         fontsize=14, fontweight='bold')\n",
@@ -381,8 +384,8 @@
     "           linestyles='--', label='Critical threshold')\n",
     "\n",
     "# Mark our examples\n",
-    "plt.scatter([0.30], [0.85], s=300, c='white', marker='o', \n",
-    "           edgecolors='black', linewidths=3, label='Hornbills (i=0.35)', zorder=5)\n",
+    "plt.scatter([0.20], [0.85], s=300, c='white', marker='o', \n",
+    "           edgecolors='black', linewidths=3, label='Cleaner Fish (i=0.24)', zorder=5)\n",
     "plt.scatter([0.80], [0.50], s=300, c='white', marker='s', \n",
     "           edgecolors='black', linewidths=3, label='Social Media (i=1.60)', zorder=5)\n",
     "\n",
@@ -398,9 +401,9 @@
     "\n",
     "print(\"\\n=== REGIME MAP INSIGHTS ===\")\n",
     "print(\"\\n• Upper-left (green): High differentiation, low overlap → COOPERATION\")\n",
-    "print(\"  Examples: Mutualistic species, complementary businesses\")\n",
+    "print(\"  Examples: Cleaner fish, complementary businesses\")\n",
     "print(\"\\n• Lower-right (red): Low differentiation, high overlap → COMPETITION\")\n",
-    "print(\"  Examples: Similar species, direct competitors\")\n",
+    "print(\"  Examples: Social media platforms, direct competitors\")\n",
     "print(\"\\n• Diagonal (black line): Critical threshold where regime shifts\")\n",
     "print(\"  Small changes can flip cooperation ↔ competition\")"
    ]
@@ -423,7 +426,7 @@
     "   - Sharp bifurcation, not gradual transition\n",
     "\n",
     "3. **Universal applicability**:\n",
-    "   - Same mathematics for birds, platforms, organizations\n",
+    "   - Same mathematics for cleaner fish, platforms, organizations\n",
     "   - Cooperation is energetic efficiency, not altruism\n",
     "   - Validated with r = -0.944 correlation\n",
     "\n",
@@ -454,8 +457,7 @@
     "\n",
     "*Thank you for completing Tutorial 1!*\n",
     "\n",
-    "*The 44-year journey from Namibian observation to global platform*  \n",
-    "*Now continues through you.*"
+    "*The MELV framework continues through you.*"
    ]
   }
  ],
